--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       padding: 8px 8px;
       z-index: 1000;
       font-size: 16px;
-
       display: flex;
-      flex-direction: column;       /* stack text and slider vertically */
+      flex-direction: column;
       justify-content: center;
       align-items: center;
     }
@@ -27,7 +26,7 @@
       color: #fff;
       text-decoration: none;
       font-weight: bold;
-      margin-bottom: 8px;           /* space below the text */
+      margin-bottom: 8px;
     }
 
     #banner a:hover {
@@ -41,13 +40,13 @@
     }
 
     button {
-      padding: 12px 20px;        /* More padding for a larger tap area */
-      font-size: 18px;           /* Larger, readable text */
+      padding: 12px 20px;
+      font-size: 18px;
       cursor: pointer;
-      border-radius: 6px;        /* Slight rounding for comfort */
-      min-width: 48px;           /* Minimum recommended width */
-      min-height: 48px;          /* Minimum recommended height */
-      touch-action: manipulation; /* Improves responsiveness on mobile */
+      border-radius: 6px;
+      min-width: 48px;
+      min-height: 48px;
+      touch-action: manipulation;
     }
 
     .tile-number {
@@ -86,7 +85,7 @@
       height: 100vh;
       overflow: auto;
       position: relative;
-      top: 80px; /* pushed down to avoid overlapping with taller banner */
+      top: 80px;
     }
 
     #grid {
@@ -123,7 +122,6 @@
       border: none;
     }
 
-    /* Black slider thumb and track */
     input[type="range"] {
       -webkit-appearance: none;
       width: 300px;
@@ -143,7 +141,7 @@
       cursor: pointer;
       border-radius: 50%;
       border: 2px solid #fff;
-      margin-top: -5px; /* center thumb vertically */
+      margin-top: -5px;
     }
 
     input[type="range"]::-moz-range-thumb {
@@ -163,7 +161,7 @@
       Click here to be a part of the Million Message Wall or select a wall and tile to explore.
     </a>
     <div class="slider-controls">
-      <span id="sliderValue">1</span>
+      <span id="sliderValue">Wall 1</span>
       <button id="downBtn">−</button>
       <input type="range" id="videoSlider" min="1" max="1000" value="1" />
       <button id="upBtn">+</button>
@@ -183,33 +181,8 @@
     const GRID_COLS = 10;
     const GRID_ROWS = 100;
 
-    const initialVideos = [
-      "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs",
-      "tFU2nhcu2Fs", "EUadj4yDug8", "Xs4Z_4nQV2Y", "C6qOQ9D7puw",
-      "P_iiOMd3fOY", "b63IPrrdPOU"
-    ];
-
-    const messages = [
-      "Blessed are those who expect nothing, for they shall never be disappointed.",
-      "Baianá nananananana",
-      "Gotta love that synth",
-      "Platinum Doug never disappoints!!",
-      "Lets get some quick comfort?!",
-      "This is one of the first songs to really get me on the edm train and it doesn't get old",
-      "Been listening to Oliver since 2014, never disappointed, love this man and his music.",
-      "This song is ridiculous. I can't go a day without listening to it like 10 times.",
-      "To people trying to sing along! Cicovite konje na pajvant pasat Tuti man, tuti man, tuti libe na fidan",
-      "I have been looking for this song for five years and all I could remember was. I have the keys to heaven finally found it"
-    ];
-
-    const targetLength = 10000;
-    const toAppendCount = targetLength - initialVideos.length;
-    const appendedVideos = new Array(toAppendCount).fill("");
-    // const sampleVideos = initialVideos.concat(appendedVideos);
-
     let sampleVideos = [];
-    sampleVideos = initialVideos.concat(appendedVideos);
-
+    let messages = [];
 
     let tileNumbersVisible = true;
     const visibleTiles = {};
@@ -264,7 +237,7 @@
                   />
                 </div>`;
 
-              const message = messages[index % messages.length];
+              const message = messages[index % messages.length] || "No message available.";
               const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
               document.getElementById('banner').innerHTML = `
                 Message #${index + 1}: &nbsp;|&nbsp; ${message} 
@@ -287,14 +260,6 @@
       }
     }
 
-    renderTiles();
-
-    viewport.addEventListener("scroll", renderTiles);
-    viewport.addEventListener("touchmove", renderTiles);
-    viewport.addEventListener("wheel", renderTiles);
-    window.addEventListener("resize", renderTiles);
-
-    // Slider Logic
     const slider = document.getElementById('videoSlider');
     const sliderValue = document.getElementById('sliderValue');
     const upBtn = document.getElementById('upBtn');
@@ -304,33 +269,32 @@
       const value = parseInt(slider.value, 10);
       sliderValue.textContent = `Wall ${value}`;
 
-      const fileName = `${value.toString().padStart(4, '0')}`;  
-      const file = `https://qman2386.github.io/website/videos-${fileName}.txt`;
+      const fileName = `${value.toString().padStart(4, '0')}`;
+      const videoFile = `https://qman2386.github.io/website/videos-${fileName}.txt`;
+      const messageFile = `https://qman2386.github.io/website/messages-${fileName}.txt`;
 
-      fetch(file)
-        .then(res => res.text())
-        .then(text => {
-          let initialVideos = [];
-          initialVideos = text.trim().split('\n').map(line => line.trim()).filter(Boolean);
+      Promise.all([
+        fetch(videoFile).then(res => res.text()),
+        fetch(messageFile).then(res => res.text())
+      ]).then(([videoText, messageText]) => {
+        // Update videos
+        const initialVideos = videoText.trim().split('\n').map(line => line.trim()).filter(Boolean);
+        const toAppendCount = 10000 - initialVideos.length;
+        sampleVideos = initialVideos.concat(new Array(toAppendCount).fill(""));
 
-          const targetLength = 10000;
-          const toAppendCount = targetLength - initialVideos.length;
-          const appendedVideos = new Array(toAppendCount).fill("");
-          sampleVideos = initialVideos.concat(appendedVideos);
-          console.log(sampleVideos);
+        // Update messages
+        messages = messageText.trim().split('\n').map(line => line.trim()).filter(Boolean);
 
-          // Clear existing tiles
-          Object.keys(visibleTiles).forEach(key => {
-            grid.removeChild(visibleTiles[key]);
-            delete visibleTiles[key];
-          });
+        // Clear and re-render
+        Object.keys(visibleTiles).forEach(key => {
+          grid.removeChild(visibleTiles[key]);
+          delete visibleTiles[key];
+        });
 
-          // Render new tiles
-          renderTiles();
-
+        renderTiles();
+      }).catch(error => {
+        console.error("Error loading files:", error);
       });
-
-
     }
 
     slider.addEventListener('input', updateSliderDisplay);
@@ -351,7 +315,11 @@
       }
     });
 
-    updateSliderDisplay(); // initialize
+    updateSliderDisplay(); // initial load
+    viewport.addEventListener("scroll", renderTiles);
+    viewport.addEventListener("touchmove", renderTiles);
+    viewport.addEventListener("wheel", renderTiles);
+    window.addEventListener("resize", renderTiles);
   </script>
 </body>
 </html>
