--- a/index.html
+++ b/index.html
@@ -5,8 +5,153 @@
   <title>Million Message Wall. One million messages. One wall. One world.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    /* same styles as before — omitted here for brevity */
-    /* Keep all your styles unchanged */
+    #banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 8px 8px;
+      z-index: 1000;
+      font-size: 16px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #banner a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      margin-bottom: 8px;
+    }
+
+    #banner a:hover {
+      text-decoration: underline;
+    }
+
+    .slider-controls {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    button {
+      padding: 12px 20px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 6px;
+      min-width: 48px;
+      min-height: 48px;
+      touch-action: manipulation;
+    }
+
+    .tile-number {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 20px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      text-align: center;
+      line-height: 20px;
+      font-size: 12px;
+      opacity: 1;
+      transition: opacity 0.3s ease;
+    }
+
+    .tile:hover .tile-number {
+      opacity: 1;
+    }
+
+    .tile-number.hidden {
+      display: none;
+    }
+
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: #000;
+      font-family: sans-serif;
+      color: white;
+    }
+
+    #viewport {
+      width: 100vw;
+      height: 100vh;
+      overflow: auto;
+      position: relative;
+      top: 80px;
+    }
+
+    #grid {
+      position: relative;
+      width: 1600px;
+      height: 9000px;
+      margin: 0 auto;
+    }
+
+    .tile {
+      position: absolute;
+      width: 160px;
+      height: 90px;
+      background: #222;
+      overflow: hidden;
+      cursor: pointer;
+    }
+
+    .tile img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+
+    .iframe-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .iframe-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    input[type="range"] {
+      -webkit-appearance: none;
+      width: 300px;
+      height: 6px;
+      background: #333;
+      border-radius: 3px;
+      outline: none;
+      cursor: pointer;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 16px;
+      height: 16px;
+      background: #000;
+      cursor: pointer;
+      border-radius: 50%;
+      border: 2px solid #fff;
+      margin-top: -5px;
+    }
+
+    input[type="range"]::-moz-range-thumb {
+      width: 16px;
+      height: 16px;
+      background: #000;
+      cursor: pointer;
+      border-radius: 50%;
+      border: 2px solid #fff;
+    }
   </style>
 </head>
 
@@ -62,7 +207,7 @@
 
           if (!visibleTiles[key]) {
             const index = (row * GRID_COLS + col);
-            const youtubeId = sampleVideos[index] || "";
+            const youtubeId = sampleVideos[index % sampleVideos.length];
 
             const tile = document.createElement("div");
             tile.className = "tile";
@@ -70,7 +215,7 @@
             tile.style.left = `${col * TILE_WIDTH}px`;
 
             const img = document.createElement("img");
-            img.src = youtubeId ? `https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg` : "https://i.imgur.com/UH3IPXw.png";
+            img.src = `https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg`;
             img.alt = `Tile ${row}, ${col}`;
             tile.appendChild(img);
 
@@ -86,19 +231,26 @@
               tile.innerHTML = `
                 <div class="iframe-container">
                   <img 
-                    src="${youtubeId ? `https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg` : 'https://i.imgur.com/UH3IPXw.png'}" 
+                    src="https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg" 
                     alt="Video thumbnail" 
                     style="width:100%; height:100%; object-fit:cover;" 
                   />
                 </div>`;
 
               const message = messages[index] || "No message yet.";
+              const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
+              // document.getElementById('banner').innerHTML = `
+              //   Wall ${slider.value} — Message #${index + 1}: &nbsp;|&nbsp; ${message} 
+              //   &nbsp; &nbsp;
+              //   <a href="${videoUrl}" target="_blank">Click Here to Watch on YouTube</a>
+              // `;
               let bannerHtml = `Wall ${slider.value} — Message #${index + 1}: &nbsp;|&nbsp; ${message}`;
               if (youtubeId) {
                 const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
                 bannerHtml += ` &nbsp; &nbsp; <a href="${videoUrl}" target="_blank">Click Here to Watch on YouTube</a>`;
               }
               document.getElementById('banner').innerHTML = bannerHtml;
+
             });
 
             grid.appendChild(tile);
@@ -129,43 +281,27 @@
       const messageFile = `https://qman2386.github.io/website/messages-${fileName}.txt`;
 
       Promise.all([
-        fetch(videoFile),
-        fetch(messageFile)
-      ])
-      .then(async ([videoRes, messageRes]) => {
-        if (!videoRes.ok || !messageRes.ok) {
-          console.warn("One or both files could not be loaded. Using empty data.");
-          sampleVideos = new Array(10000).fill("");
-          messages = new Array(10000).fill("");
-          clearTilesAndRender();
-          return;
-        }
-
-        const videoText = await videoRes.text();
-        const messageText = await messageRes.text();
-
+        fetch(videoFile).then(res => res.text()),
+        fetch(messageFile).then(res => res.text())
+      ]).then(([videoText, messageText]) => {
+        // Update videos
         const initialVideos = videoText.trim().split('\n').map(line => line.trim()).filter(Boolean);
         const toAppendCount = 10000 - initialVideos.length;
         sampleVideos = initialVideos.concat(new Array(toAppendCount).fill(""));
 
-        messages = messageText.trim().split('\n').map(line => line.trim());
+        // Update messages
+        messages = messageText.trim().split('\n').map(line => line.trim()).filter(Boolean);
 
-        clearTilesAndRender();
-      })
-      .catch(error => {
-        console.error("Error fetching files:", error);
-        sampleVideos = new Array(10000).fill("");
-        messages = new Array(10000).fill("");
-        clearTilesAndRender();
-      });
-    }
+        // Clear and re-render
+        Object.keys(visibleTiles).forEach(key => {
+          grid.removeChild(visibleTiles[key]);
+          delete visibleTiles[key];
+        });
 
-    function clearTilesAndRender() {
-      Object.keys(visibleTiles).forEach(key => {
-        grid.removeChild(visibleTiles[key]);
-        delete visibleTiles[key];
+        renderTiles();
+      }).catch(error => {
+        console.error("Error loading files:", error);
       });
-      renderTiles();
     }
 
     slider.addEventListener('input', updateSliderDisplay);
